Testing if blog teasers will show up correctly on mobile.

--- a/public/styles/_blogsPage.scss
+++ b/public/styles/_blogsPage.scss
@@ -68,6 +68,10 @@
 .blogDate{
     margin-right: 5px;
     text-align: center;
+    max-height: 100px;
+}
+.blogTease{
+    width: 100%;
 }
 /*.blogsInfo{
     display: block;
